clean up, prepare gcd model