@@ -26,15 +26,35 @@ tasks.withType(JavaCompile) {
 application {
     mainModule = 'at.binter.gcd'
     mainClass = 'at.binter.gcd.GCDApplication'
+    /* applicationDefaultJvmArgs = [
+             "--add-opens=javafx.base/com.sun.javafx.runtime=org.controlsfx.controls",
+             "--add-opens=javafx.base/com.sun.javafx.collections=org.controlsfx.controls",
+             "--add-opens=javafx.graphics/com.sun.javafx.css=org.controlsfx.controls",
+             "--add-opens=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls",
+             "--add-opens=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls",
+             "--add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls",
+             "--add-opens=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED",
+             "--add-opens=javafx.controls/com.sun.javafx.scene.control=org.controlsfx.controls",
+             "--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls",
+             "--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls",
+             "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED"
+     ]*/
+}
+
+plugins.withType(JavaPlugin).configureEach {
+    java {
+        modularity.inferModulePath = true
+    }
 }
 
 javafx {
     version = '16'
-    modules = ['javafx.controls', 'javafx.fxml']
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.media']
 }
 
 dependencies {
-    implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')
+    implementation 'org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0'
+    //implementation 'org.controlsfx:controlsfx:11.1.0'
 
     implementation 'org.slf4j:slf4j-api:2.0.0-alpha4'
     implementation 'ch.qos.logback:logback-classic:1.3.0-alpha10'
